2007-12-28  Stephen Nelson  <stephenenelson@mac.com> (0.07)

	* In tests, we now use null drivers or skip unless the environment
	variable VIDEO_XINE_SHOW is set.
	* Documented Video::Xine and Video::Xine::Stream
	* Now we pass through arguments properly to audio and video drivers
	* Sped up Event test
	* Changed test audio from "drunk as an owl" to short voice recording

2007-12-26  Stephen Nelson  <stephenenelson@mac.com> (0.06)

	* Fixed installation issue

2007-12-26  Stephen Nelson  <stephenenelson@mac.com> (0.05)

	* Moved 'Changes' to 'ChangeLog'
	* Made Makefile.PL check for xine lib and get library configuration from xine-config.
	* Got rid of spurious META.yml in directory.

Revision history for Perl extension Video::Xine.

0.04  Wed Dec 26 02:36:21 PST 2007
	* Skip tests without X11. 
	* Default to display :0.0 for tests.

0.01  Tue Mar 15 07:24:37 2005
	- original version; created by h2xs 1.23 with options
		-A -n Video::Xine /usr/include/xine.h -L/usr/lib -lxine -lz -lnsl -lpthread -lrt
