@@ -36,7 +36,8 @@ SKIP: {
 						      $display->getPixelAspect()
 						     );
   my $driver = Video::Xine::Driver::Video->new($xine,"auto",1,$x11_visual);
-  my $audio_driver = Video::Xine::Driver::Audio->new($xine, 'none');
+  my $audio_driver = Video::Xine::Driver::Audio->new($xine, 'none')
+    or skip "Unable to load 'none' driver", 1;
   my $stream = $xine->stream_new($audio_driver, $driver);
   
   $stream->open("$Bin/time_015.avi")
